# MobileID

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitignore.uv  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  DEPLOY.md  Dockerfile  FRONTEND_USER_STATUS_FIX.md  GEMINI.md  HEALTH_CHECK_FIX.md  IMPLEMENTATION_SUMMARY.md  README.md  README_RATE_LIMITING.md  SECURITY.md  build_files.sh  docker-compose.prod.yml  docker-compose.yml  docker.env  dockerfile  manage.py  package-lock.json  qodana.yaml  requirements.txt  uwsgi.ini  vercel.json  walkthrough.md
src/: .dockerignore  .env.example  .env_example  .flake8  .trivyignore  .uvignore  Dockerfile  README_UV.md  UV_SETUP.md  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements-mysql.txt  requirements.txt  run.sh  test_driver.py
src/auth/: admin.py  signals.py  urls.py
src/auth/api/: passkeys.py  webauthn.py
src/auth/middleware/: authentication.py
src/auth/services/: identification.py  webauthn.py
src/authn/: admin.py  apps.py  authentication.py  constants.py  models.py  services.py  session_revocation.py  signals.py  tests.py  throttling.py  urls.py
src/authn/admin/: __init__.py  passkey.py  rsa_key.py  user.py  user_profile.py
src/authn/api/: keys.py  passkeys.py  utils.py  webauthn.py  wellknown.py
src/authn/middleware/: authentication.py
src/authn/migrations/: 0001_initial.py  0002_delete_passkey.py  0002_passkeycredential.py  0003_alter_userprofile_user_profile_img.py  0004_failedloginattempt.py  0005_rsakeypair_and_more.py  0006_login_audit_enhancements.py  0007_loginauditlog_authn_login_success_d86091_idx.py  0008_access_token_blacklist.py  0009_delete_passkeycredential.py  0010_alter_failedloginattempt_locked_until.py  0010_delete_rsakeypair_and_more.py
src/authn/models/: __init__.py  access_token_blacklist.py  failed_login_attempt.py  login_audit.py  passkey_credential.py  rsa_keys.py  user_profile.py
src/authn/repositories/: __init__.py  security_repo.py
src/authn/services/: __init__.py  identification.py  identifiers.py  login_challenge.py  passkeys.py  profile_creation.py  webauthn.py
src/authn/tests/: test_auth_api.py  test_avatar_api.py  test_forms.py  test_login_security.py  test_models.py  test_profile_api.py  (+4 more)
src/core/: admin.py  apps.py  asgi.py  checks.py  logging.py  middleware.py  settings.py  signals.py  test_runner.py  tests.py  urls.py  wsgi.py
src/index/: admin.py  models.py  permissions.py  serializers.py  status.py  tests.py  urls.py
src/mobileid/: asgi.py  middleware.py  settings.py  test_settings.py  tests.py  urls.py  wsgi.py
src/shared/: index.js
src/views/: BarcodeDashboard.vue  ProfileEdit.vue
src/wallet/: urls.py
(+1019 files in other folders)
