[project]
name = "mobileid"
version = "0.1.0"
description = "MobileID Django Backend - Mobile identification and barcode management with WebAuthn"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "djangorestframework>=3.14,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-cors-headers>=4.3,<5.0",
    "python-dotenv>=1.0",
    "Pillow>=10.0,<11.0",
    "webauthn>=1.11,<2.0",
    "selenium>=4.0,<5.0",
    "django-extensions>=3.2,<4.0",
    "django-widget-tweaks>=1.5,<2.0",
    "gunicorn>=21.2,<24.0",
    "redis>=5.0,<6.0",
    "dj-database-url>=2.2",
    "mysqlclient>=2.2,<3.0",
    "psycopg[binary]>=3.2",
    "uvicorn[standard]>=0.30,<1.0",
    "webdriver-manager>=4.0,<5.0",
    "argon2-cffi>=23.1.0,<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.0",
    "coverage>=7.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "flake8>=7.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mobileid.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--reuse-db",
    "--nomigrations",
    "-v",
]
